syntax = "proto3";

package monad_proto.transaction;

message ProtoTransactionCollection {
    oneof txns {
        ProtoEthereumTransactions eth_txns = 1;
        ProtoMockTransactions mock_txns = 2;
    }
}

message ProtoEthereumTransactions {

}

message ProtoMockTransactions {

}
